WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205970
[Cocoa] persistent-usage-record message fails first time; succeeds subsequent times
https://bugs.webkit.org/show_bug.cgi?id=205970
Summary
[Cocoa] persistent-usage-record message fails first time; succeeds subsequent...
Jer Noble
Reported
2020-01-08 16:10:14 PST
[Cocoa] persistent-usage-record message fails first time; succeeds subsequent times
Attachments
Patch
(5.19 KB, patch)
2020-01-08 16:16 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.22 KB, patch)
2020-01-08 16:50 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-01-08 16:15:37 PST
<
rdar://problem/57785647
>
Jer Noble
Comment 2
2020-01-08 16:16:53 PST
Created
attachment 387156
[details]
Patch
Eric Carlson
Comment 3
2020-01-08 16:29:47 PST
Comment on
attachment 387156
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=387156&action=review
> Source/WebCore/ChangeLog:12 > + Drive-by fix: fix the exeptional case where a PUR session is closed but PUR data isn't available; send
s/exeptional/exceptional/
Jer Noble
Comment 4
2020-01-08 16:50:16 PST
Created
attachment 387162
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2020-01-09 12:18:48 PST
Comment on
attachment 387162
[details]
Patch for landing Clearing flags on attachment: 387162 Committed
r254288
: <
https://trac.webkit.org/changeset/254288
>
WebKit Commit Bot
Comment 6
2020-01-09 12:18:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug